Issue #1 fixed